# FiSH-irssi

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  DH1080.c  Doxyfile  FiSH.c  FiSH.h  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  SHA-256.c  autogen.sh  base64.c  blowfish.c  blowfish.h  cfgopts.c  config.status  configure  configure.ac  module.h  regen.sh  standard.h  update_config.pl
.github/: FUNDING.yml
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: FiSH-irssi.txt
src/: CMakeLists.txt  DH1080.c  DH1080.h  FiSH.c  FiSH.h  FiSH_version.h.in  Makefile  Makefile.am  Makefile.in  SHA-256.c  SHA256.c  SHA256.h  base64.c  base64.h  blowfish.c  blowfish.h  blowfish_cbc.c  blowfish_cbc.h  cfgopts.c  cfgopts.h  config.h  config.h.in  fish2.c  fish2.h  inifile.c  inifile.h  irc_helper.c  irc_helper.h  key_store.c  key_store.h  keyx.c  keyx.h  log.c  log.h  logManager.c  logManager.h  module.h  openssl_blowfish.c  password.c  password.h  (+8 more)
src/.deps/: DH1080.Po  SHA-256.Po  base64.Po  blowfish.Po  cfgopts.Po
src/common/: CMakeLists.txt  DH1080.c  base64.c  blowfish.c  blowfish.h  blowfish_cbc.c  blowfish_cbc.h  common.h.in  inifile.c  inifile.h  password.c
src/fish2/: blowcrypt.c  blowcrypt.h  noop.c  noop.h
src/irssi/: CMakeLists.txt  FiSH.c  FiSH.h  FiSH_version.h.in
src/tests/: CMakeLists.txt  test1.c
test/: password.c  test.c
v2/: blowfish.c  fish.c  fish.h  irssi.c
